--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <!-- css stylesheets -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="/css/all.min.css">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/all.min.css">
 
   <!-- fontawsome script -->
   <script src="https://kit.fontawesome.com/2ab144e6ce.js" crossorigin="anonymous"></script> 
@@ -57,7 +57,7 @@
       </div>
 
       <div class="col-lg-6">
-        <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+        <img class="title-image" src="./images/iphone6.png" alt="iphone-mockup">
       </div>
     </div>
   </div> 
@@ -105,12 +105,12 @@
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <img class="testimonial-image" src="./images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="./images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
       </div>
@@ -130,10 +130,10 @@
   <!-- Press -->
 
   <section class="colored-section" id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="./images/TechCrunch.png" alt="tc-logo">
+    <img class="press-logo" src="./images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="./images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="./images/mashable.png" alt="mashable-logo">
 
   </section>
 
